--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "faker": "^4.1.0",
     "graphql": "^14.5.8",
+    "lodash": "^4.17.15",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3"
   },
