--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "graphql": "^14.5.8",
     "lodash": "^4.17.15",
     "pg": "^7.12.1",
-    "pg-hstore": "^2.3.3"
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.19.5"
   },
   "devDependencies": {},
   "scripts": {
