--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "faker": "^4.1.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.5"
